--- a/estilo.css
+++ b/estilo.css
@@ -57,11 +57,14 @@ ul li{
 
 
 /*************/
-
+.container{
+  position: fixed;
+}
 .wrapper {
     
     display: inline-flex;
     margin-top: 12rem;
+   /* position: fixed;*/
     
     
   }
@@ -126,3 +129,145 @@ ul li{
     background-color: var(--color);
     color: white;
   }
+
+  .vacio{
+    width: 1000vw;
+    height: 19vw;
+  }
+.contenido{
+  display: flex;
+  align-content: space-around;
+  margin: 13px;
+}
+
+   canvas{
+
+    background-color: #4e5be6;
+    width: 50vw;
+
+
+
+   }
+
+
+
+   /************** juegoo *****************/
+
+
+   @import url(https://fonts.googleapis.com/css?family=Raleway:400,700);
+
+
+.usuario {
+  width: 40vw;
+  font-size: 16px;
+  font-family: "Raleway", sans-serif;
+}
+
+.usuario {
+  margin: 10px;
+  padding: 10px;
+  background: #171717;
+  color: white;
+  display: inline;
+  border-radius: 10px;
+}
+
+input,
+textarea {
+  border: 0;
+  outline: 0;
+  font-size: 1rem;
+  background: transparent;
+  color: white;
+  position: relative;
+  font-family: "Raleway", sans-serif;
+}
+
+textarea {
+  resize: none;
+}
+
+.content {
+  max-width: 900px;
+  margin: 0 auto;
+  padding-top: 2em;
+  height: 700px;
+  border-radius: 8px;
+}
+.content .title {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 400;
+}
+
+.form {
+  max-width: 500px;
+  margin: 0 auto;
+  background: rgba(10, 10, 10, 0.5);
+  border-radius: 2px;
+}
+.form-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.form-item {
+  position: relative;
+  width: 100%;
+  padding: 1em;
+}
+@media only screen and (min-width: 600px) {
+  .form-item.col-5 {
+    width: 50%;
+  }
+}
+.form-item .textarea {
+  height: 10em;
+}
+.form-item .input,
+.form-item .textarea {
+  display: block;
+  padding: 1em;
+  width: 100%;
+  transition: all 0.3s;
+  border-bottom: 2px solid #00b7ff;
+}
+.form-item .input:focus,
+.form-item .textarea:focus {
+  border-bottom: 2px solid #828282;
+}
+.form-item .input:valid + .label, .form-item .input:focus + .label,
+.form-item .textarea:valid + .label,
+.form-item .textarea:focus + .label {
+  top: 1em;
+  left: 1em;
+  font-size: 0.9em;
+}
+.form-item .input:valid,
+.form-item .textarea:valid {
+  border-bottom: 2px solid #334dff;
+}
+.form-item .label {
+  position: absolute;
+  top: 2em;
+  left: 2em;
+  text-transform: capitalize;
+  transition: all 0.3s;
+}
+.form-item .btn-enviar {
+  display: block;
+  width: 100%;
+  padding: 1em 0;
+  box-shadow: 0 0 0 2px #00b7ff;
+  color: #00b7ff;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.form-item .btn-enviar:hover {
+  background: #334dff;
+  color: white;
+  box-shadow: 0 0 0 0 transparent;
+}
+.form-item .btn-enviar:active {
+  background: #0f2dff;
+  transform: scale(0.97);
+}
